Closed Bug 1090293 Opened 11 years ago Closed 11 years ago

Can`t hear sound using Audio getUserMedia test page on first try

Categories

(Core :: WebRTC: Audio/Video, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla36
Tracking Status
firefox33 --- unaffected
firefox34 --- unaffected
firefox35 --- unaffected
firefox36 + verified

People

(Reporter: bmaris, Assigned: jib)

References

Details

(Keywords: regression)

Attachments

(1 file)

Reproducible on: Nightly 36.0a1(2014-10-28) and Aurora 35.0a2(2014-10-28) on Windows 7 x64 and Mac 10.8.5 STR: 1.Launch Firefox with a clean profile 2.Navigate to: http://mozilla.github.io/webrtc-landing/gum_test.html 3.Click on Audio button 4.Speak on microphone Expected result: You can hear sound in the headset. Actual result: No sound is heard. After hitting Pause/Play twice you can hear sound. Notes: 1. This issue is reproducible on Windows 7 x64 and Mac 10.8.5 2. This issue is not reproducible on Ubuntu 14.04 x64 3. This bug is not reproducible on Firefox 34 Beta 4 (20141027152126) 4. This is a regression: m-c: Last good revision: 44168a7af20d (2014-10-12) First bad revision: 78a4540b0a9c (2014-10-13) Pushlog: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=44168a7af20d&tochange=78a4540b0a9c m-i: Last good revision: f749e3f70ffc First bad revision: 8870dc5bfa71 Pushlog: https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=f749e3f70ffc&tochange=8870dc5bfa71
Jan-ivar - this is due to your commits for Bug 1070127
Blocks: 1070127
Flags: needinfo?(jib)
[Tracking Requested - why for this release]: this is a regression in 36.
I managed to repro on osx as well. It seems that the issue (at least on osx) is that the MSG has no clue there is going to be audio anymore, so it stays with a SystemClockDriver. It _should_ switch to an AudioCallbackDriver when audio starts flowing in, but does not, for some reason. Refreshing the page "fixes" it for me.
Me too, and I've verified that it's caused by the placeholdertrack patch.
Flags: needinfo?(jib)
The logic to switch to an AudioCallbackDriver is there: http://dxr.mozilla.org/mozilla-central/source/dom/media/MediaStreamGraph.cpp#937 We should go in this path, but we don't. The NSPR log module for this module is "MediaStreamGraph"
Assignee: nobody → jib
Status: NEW → ASSIGNED
Attachment #8519364 - Flags: review?(rjesup)
Attachment #8519364 - Flags: review?(rjesup) → review+
Greenish try - https://treeherder.mozilla.org/ui/#/jobs?repo=try&revision=597960367e7b (None of the yellows seem media-related)
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
Bogdan, can you please verify this with tomorrow's Nightly?
QA Contact: bogdan.maris
Reproduced with Nightly 2014-10-28 - no sound is heard. Verified as fixed with Nightly 36.0a1 (Build ID: 20141111030203) on Windows 7 x64 and Mac OS X 10.10 with both jack and USB headsets and e10s enabled/disabled.
Status: RESOLVED → VERIFIED
QA Contact: bogdan.maris → alexandra.lucinet
See Also: → 1123950
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: