Bug 1090293 - Fix failure to get audio on first getUserMedia after start r=jesup fix GetTrackTypesAvailable to not report placeholder tracks